turtleart.stairs.Stairs.scala.error
Erreur de compilation :
Stairs:2: error: not found: value n
 n=6; 
 ^Stairs:3: error: not found: value n
  while (n>=0) {
         ^